# pypto-serving

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.agents/skills/qwen3-14b-offline-perf-test/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: pr-scope-note.md
docs/dev/: parallel.md  profile.md
docs/dev/model/: deepseek-v4.md  qwen.md
examples/model/deepseek_v4/: __init__.py
examples/model/deepseek_v4/runner/: __init__.py  npu_executor.py  npu_runner.py  weight_loader.py
examples/model/qwen3_14b/: npu_generate.py  npu_serving.json
examples/model/qwen3_14b/runner/: npu_executor.py  npu_runner.py  qwen3_l3_dispatch.py
examples/model/qwen3_14b/src/: l3_generate.py
platform/: meson.build  meson_options.txt
platform/docs/: README.md
platform/examples/: meson.build
platform/examples/system/engine/: engine.cpp  meson.build
platform/include/modules/: subscription.hpp
platform/include/system/channels/: base.hpp  input.hpp  output.hpp
pypto_serving/: __init__.py  requirements.txt
pypto_serving/cli/: __init__.py  __main__.py  main.py
pypto_serving/config/: __init__.py  parallel.py  types.py
pypto_serving/model/: __init__.py  model_loader.py  tokenizer.py
pypto_serving/model/common/: __init__.py
pypto_serving/model/common/executor/: __init__.py  executor.py  pypto_executor.py  sampler.py  utils.py
pypto_serving/model/common/runner/: __init__.py  model_runner.py
pypto_serving/model/deepseek/: __init__.py  npu_executor.py  npu_runner.py  weight_loader.py
pypto_serving/model/qwen/: __init__.py  npu_executor.py  npu_runner.py  qwen3_l3_dispatch.py
pypto_serving/serving/: __init__.py
pypto_serving/serving/engine/: __init__.py  async_engine.py  engine.py  request_state.py
pypto_serving/serving/memory/: __init__.py  kv_cache.py  request_kv_pool.py
pypto_serving/serving/memory/prefix_cache/: __init__.py  base.py  radix.py
pypto_serving/serving/sched/: __init__.py  scheduler.py
pypto_serving/serving/server/: __init__.py  server.py  serving_worker.py  streamer.py
pypto_serving/tools/: __init__.py
pypto_serving/tools/profile/: env.py  recorder.py
pypto_serving/worker/: __init__.py  worker.py
python/cli/: main.py
python/core/: __init__.py  async_engine.py  block_pool.py  engine.py  executor.py  kv_cache.py  model_loader.py  model_runner.py  pypto_executor.py  radix_cache.py  scheduler.py  server.py  serving_worker.py  tokenizer.py  types.py
python/profile/: __init__.py  merge.py
python/runtime/: worker.py
scripts/: merge_profile.sh
tests/: bench_serving.py  test_batching.py  test_cli.py  test_deepseek_v4.py  test_deepseek_v4_accuracy.py  test_device_sampling_submission.py  test_npu_prefix_chunk.py  test_package.py  test_parallel.py  test_profile.py  test_qwen3_accuracy.py  test_qwen3_serving.py  test_radix_cache.py  test_serving_worker.py
tests/lint/: check_english_only.py
